[package]
name = "push2_soundboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.9.1"
anyhow = "1.0.56"
thiserror = "1.0.30"
gameloop = "0.2.0"
push2_display = "0.2.0"
embedded-graphics = "0.7.1"
rodio = "*"
tray-item = "*"
ron = "*"
serde = "*"
serde_derive = "*"
notify-debouncer-full = "*"
#tokio = { version = "1", features = ["full"]}
rspotify = {version = "*", default-features = false, features = ["client-ureq", "ureq-rustls-tls"] , optional = true}
open = {version = "*", optional = true}

[build-dependencies]
winres = "*"

[features]
default = ["spotify"]
console = []
spotify = ["dep:rspotify", "dep:open"]