[package]
name = "push2_soundboard"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "*"
anyhow = "*"
thiserror = "*"
gameloop = "*"
push2_display = { git = "https://github.com/mbracher/push2_display.git"}
embedded-graphics = "*"
rodio = "*"
tray-item = "*"
ron = "*"
serde = "*"
serde_derive = "*"
notify-debouncer-full = "*"
#tokio = { version = "1", features = ["full"]}
rspotify = {version = "*", default-features = false, features = ["client-ureq", "ureq-rustls-tls"] , optional = true}
open = {version = "*", optional = true}

[build-dependencies]
winres = "*"

[features]
default = ["spotify"]
console = []
spotify = ["dep:rspotify", "dep:open"]